src/tests/fixtures/generics/genericTypeUsedAsUnionMember.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Page = {
  __typename: "Page";
  /** @gqlField */
  name: string;
};

/** @gqlType */
export class Edge<T> {
  /** @gqlField */
  node: T;
  /** @gqlField */
  cursor: string;
}

/** @gqlUnion */
type SomeUnion = Page | Edge<Page>;

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/genericTypeUsedAsUnionMember.invalid.ts:17:25 - error: Unexpected generic type used sa union member. Generic type may not currently be used as members of a union. Grats requires that all union members define a `__typename` field typed as a string literal matching the type's name. Since generic types are synthesized into multiple types with different names, Grats cannot ensure they have a correct `__typename` property and thus cannot be used as members of a union.

17 type SomeUnion = Page | Edge<Page>;
                           ~~~~~~~~~~
